fixed search handle from wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	transition: 0.2s ease;
+	display: flex;
+	flex-flow: row;
 	font-family: "Helvetica Neue";
 }
 
@@ -49,7 +51,7 @@ body {
 	display: inline-block;
 	content: '';
 	top: 50%;
-	right: 60px;
+	right: 70px;
 	height: 25px;
 	margin: 0;
 	margin-left: -2px;
@@ -81,6 +83,7 @@ body {
 	text-align: center;
 	color: var(--default);;
 	background: white;
+	margin-left: 10px;
 	border: 4px solid var(--default);;
 	border-radius: 5px;
 	transition: color 0.5s, background-color 0.5s;
